# nlutils

./: .gitignore  .ruby-gemset  .travis.yml  CMakeLists.txt  Gemfile  LICENSE  Makefile  README.md  TODO  crosscompile.sh
.github/workflows/: test.yml
embedded/: CMakeLists.txt  firmware_update.sh  set_hostname.sh  shutdown.sh  sudo_nl_web
embedded/web/: firmware.html  index.html  source.html
embedded/web/cgi-bin/: apps  common.sh  firmware
embedded/web/styles/: boilerplate.css  box.css  main.css
include/: debug.h  escape.h  exec.h  fifo.h  hash.h  kvp.h  log.h  mem.h  net.h  nl_time.h  nlutils.h  sha1.h  str.h  stream.h  term.h  thread.h  url.h  url_req.h  variant.h
meta/: all_arch_pkgs.sh  bump_ver.sh  cross_pkg.sh  make_pkg.sh  make_root.sh
meta/toolchain/: cmake-toolchain-arm-linux-armhf.cmake  cmake-toolchain-arm-linux-neon.cmake  cmake-toolchain-arm-linux-nofp-old.cmake  cmake-toolchain-arm-linux-nofp.cmake
programs/: CMakeLists.txt  do_firmware.c
src/: CMakeLists.txt  debug.c  escape.c  exec.c  fifo.c  hash.c  inline_defs.c  kvp.c  log.c  mem.c  net.c  nl_time.c  nlutils.c  sha1.c  str.c  stream.c  term.c  thread.c  url.c  url_req.c  variant.c
tests/: CMakeLists.txt  TODO  debug_test.c  escape_test.c  exec_test.c  fifo_test.c  hash_test.c  kvp_test.c  mem_test.c  net_test.c  sha1_selftest.c  sha1_test.c  stream_test.c  string_test.c  term_test.c  tests.sh  thread_test.c  time_test.c  timespec_benchmark.c  url_test.c
tests/firmware/: fail.sh  success.sh
tests/url_req/: CMakeLists.txt  get_url.c  url_req_server.rb  url_req_test.c
tests/variant/: CMakeLists.txt  clamp_test.c  compare_test.c  data_test.c  to_string_test.c
tools/: CMakeLists.txt  build_root_helper.sh  mk_firmware.sh  mk_sfx.sh  pkg_helper.sh  root_helper.sh
